target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/quarkus-version: 3.15.1.redhat-00005
    app.quarkus.io/commit-id: 4d40ec60f1887063d07351d98491c0f6585475b8
    app.quarkus.io/vcs-uri: https://github.com/albertina777/otelcol-demo-app.git
    app.quarkus.io/build-timestamp: 2025-01-23 - 15:50:03 +0000
  labels:
    app.kubernetes.io/name: my-service
    app.kubernetes.io/version: 1.0.1-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: my-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: my-service
    app.kubernetes.io/version: 1.0.1-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/quarkus-version: 3.15.1.redhat-00005
    app.quarkus.io/commit-id: 4d40ec60f1887063d07351d98491c0f6585475b8
    app.quarkus.io/vcs-uri: https://github.com/albertina777/otelcol-demo-app.git
    app.quarkus.io/build-timestamp: 2025-01-23 - 15:50:03 +0000
  labels:
    app.kubernetes.io/name: my-service
    app.kubernetes.io/version: 1.0.1-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: my-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.1-SNAPSHOT
      app.kubernetes.io/name: my-service
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.quarkus.io/quarkus-version: 3.15.1.redhat-00005
        app.quarkus.io/commit-id: 4d40ec60f1887063d07351d98491c0f6585475b8
        app.quarkus.io/vcs-uri: https://github.com/albertina777/otelcol-demo-app.git
        app.quarkus.io/build-timestamp: 2025-01-23 - 15:50:03 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/version: 1.0.1-SNAPSHOT
        app.kubernetes.io/name: my-service
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: my-service:1.0.1-SNAPSHOT
          imagePullPolicy: Always
          name: my-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
