target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/albertina777/otelcol-demo-app.git
  labels:
    app.kubernetes.io/name: 'myservice '
    app.kubernetes.io/version: 1.0.1-SNAPSHOT
  name: 'myservice '
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: 'myservice '
    app.kubernetes.io/version: 1.0.1-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/quarkus-version: 3.15.2.redhat-00003
    app.quarkus.io/commit-id: 991e68b551a5f4f1e9454b633e0fc9b9ef5eb9ee
    app.quarkus.io/vcs-uri: https://github.com/albertina777/otelcol-demo-app.git
    app.quarkus.io/build-timestamp: 2025-01-28 - 06:01:40 +0000
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: myservice
spec:
  replicas: 1
  selector: {}
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.quarkus.io/quarkus-version: 3.15.2.redhat-00003
        app.quarkus.io/commit-id: 991e68b551a5f4f1e9454b633e0fc9b9ef5eb9ee
        app.quarkus.io/vcs-uri: https://github.com/albertina777/otelcol-demo-app.git
        app.quarkus.io/build-timestamp: 2025-01-28 - 06:01:40 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
    spec:
      containers:
        - env:
            - name: SERVICE_NAME
              value: http://my-service
          image: myservice:1.0.1-SNAPSHOT
          imagePullPolicy: Always
          name: myservice
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/albertina777/otelcol-demo-app.git
  labels:
    app.kubernetes.io/name: 'myservice '
    app.kubernetes.io/version: 1.0.1-SNAPSHOT
  name: 'myservice '
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: 'myservice '
    app.kubernetes.io/version: 1.0.1-SNAPSHOT
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/vcs-uri: https://github.com/albertina777/otelcol-demo-app.git
      labels:
        app.kubernetes.io/name: 'myservice '
        app.kubernetes.io/version: 1.0.1-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
          image: albertinadacunha/myservice :1.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: 'myservice '
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - 'myservice '
        from:
          kind: ImageStreamTag
          name: myservice :1.0.1-SNAPSHOT
      type: ImageChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - myservice
        from:
          kind: ImageStreamTag
          name: myservice:1.0.1-SNAPSHOT
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/albertina777/otelcol-demo-app.git
  labels:
    app.kubernetes.io/name: 'myservice '
    app.kubernetes.io/version: 1.0.1-SNAPSHOT
  name: 'myservice '
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: 'myservice '
